# image-search

./: .gitignore  99_PERCENT_BUG_ANALYSIS.md  ACTIONS_V4_UPDATE.md  ACTION_PLAN.md  ALGORITHM_RESEARCH.md  BAG_SEARCH_GUIDE.md  BUGFIX_V11_1_1.md  BUG_REPORT_100_PERCENT.md  BUILD_FIX_REPORT.md  BUILD_GUIDE.md  CONSOLE_BUTTON_FIX.md  CURRENT_STATUS.md  DEVELOPMENT_HISTORY.md  DEVELOPMENT_LOG_20250103.md  DEVELOPMENT_LOG_20250107.md  DIAGNOSTICS_WITHOUT_F12.md  FASHION_SEARCH_RESEARCH.md  FINAL_SUMMARY.md  GITHUB_ACTIONS_FIX.md  GITHUB_ACTIONS_GUIDE.md  GITHUB_DEPLOYMENT_GUIDE.md  GITHUB_DEPLOY_GUIDE.md  GITHUB_UPLOAD_COMMANDS.md  ICON_FIX_SOLUTION.md  PRODUCT_RECOGNITION_ANALYSIS.md  PROJECT_OVERVIEW.md  PROJECT_STATUS_20250103.md  PROJECT_STATUS_REPORT.md  PROJECT_STATUS_V18_5.md  PROJECT_STATUS_V18_6.md  PROJECT_STATUS_V18_7.md  PROJECT_STATUS_V18_8.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_V21.md  README.md  README_v18.md  TROUBLESHOOTING.md  TROUBLESHOOTING_GUIDE.md  (+82 more)
backups/: main_v9_backup_20250903_163145.js
src/: RESEARCH_DEEPLEARNING_SOLUTION.md  main-fixed.js  main-v6-bag-optimized.js  main-v8-brand.js  main-v9-improved.js  main.js  main.js.backup_v7  main.js.backup_v8_20250903_143758  main_backup_20250904_171505.js  main_backup_20250905_153433.js  main_backup_v11_7.js  main_simple.js  main_simple_backup.js  main_v11_0_backup.js  main_v11_1_broken.js  main_v11_1_buggy.js  main_v11_2_fixed.js  main_v11_3_backup.js  (+29 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: main.rs
(+14 files in other folders)
